[gd_scene load_steps=6 format=3 uid="uid://c1hamfe2olpfm"]

[ext_resource type="Script" uid="uid://ckg8crmjihvtg" path="res://ui/scripts/hud.gd" id="1_rbyyf"]
[ext_resource type="PackedScene" uid="uid://dm2bnda2ccam2" path="res://ui/sfx_button.tscn" id="2_276te"]
[ext_resource type="PackedScene" uid="uid://17huhevfgy52" path="res://ui/action_tile.tscn" id="3_546lt"]
[ext_resource type="LabelSettings" uid="uid://b4esuhrdi6585" path="res://resources/header_01.tres" id="4_7ihmi"]
[ext_resource type="PackedScene" uid="uid://d2jdhkrkrea67" path="res://ui/end_game_container.tscn" id="5_en2x2"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_rbyyf")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MarginContainer"]
layout_mode = 2

[node name="ActionBarContainer" type="HBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -64.0
offset_right = 336.0
grow_vertical = 0

[node name="AccelButton" parent="MarginContainer/Control/ActionBarContainer" instance=ExtResource("2_276te")]
layout_mode = 2
text = "Accel"

[node name="DecelButton" parent="MarginContainer/Control/ActionBarContainer" instance=ExtResource("2_276te")]
layout_mode = 2
text = "Decel"

[node name="LeftButton" parent="MarginContainer/Control/ActionBarContainer" instance=ExtResource("2_276te")]
layout_mode = 2
text = "Turn
Left"

[node name="RightButton" parent="MarginContainer/Control/ActionBarContainer" instance=ExtResource("2_276te")]
layout_mode = 2
text = "Turn
Right"

[node name="UndoButton" parent="MarginContainer/Control/ActionBarContainer" instance=ExtResource("2_276te")]
layout_mode = 2
text = "Undo"

[node name="OptionsContainer" type="HBoxContainer" parent="MarginContainer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="CameraButton" parent="MarginContainer/Control/OptionsContainer" instance=ExtResource("2_276te")]
layout_mode = 2
toggle_mode = true
text = "Free
Cam"

[node name="MenuButton" parent="MarginContainer/Control/OptionsContainer" instance=ExtResource("2_276te")]
layout_mode = 2
text = "Menu"

[node name="GoButton" parent="MarginContainer/Control" instance=ExtResource("2_276te")]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -64.0
offset_right = 32.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 0
text = "GO"

[node name="ActionTileContainer" type="VBoxContainer" parent="MarginContainer/Control"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -68.0
offset_bottom = -68.0
grow_vertical = 0
alignment = 2

[node name="ActionTile" parent="MarginContainer/Control/ActionTileContainer" instance=ExtResource("3_546lt")]
layout_mode = 2

[node name="ActionTile2" parent="MarginContainer/Control/ActionTileContainer" instance=ExtResource("3_546lt")]
layout_mode = 2
action = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/Control"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 1
offset_right = 128.0
offset_bottom = 128.0

[node name="TurnTimerLabel" type="Label" parent="MarginContainer/Control/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "0"
label_settings = ExtResource("4_7ihmi")
horizontal_alignment = 1

[node name="FloatinTextContainer" type="Control" parent="MarginContainer/Control"]
unique_name_in_owner = true
custom_minimum_size = Vector2(256, 256)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -32.0
offset_right = 32.0
offset_bottom = 64.0
grow_horizontal = 2

[node name="EndGameContainer" parent="MarginContainer/Control" instance=ExtResource("5_en2x2")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = -35.0
offset_top = -45.5
offset_right = 35.0
offset_bottom = 45.5

[connection signal="pressed" from="MarginContainer/Control/ActionBarContainer/AccelButton" to="." method="_on_button_pressed" binds= [0]]
[connection signal="pressed" from="MarginContainer/Control/ActionBarContainer/DecelButton" to="." method="_on_button_pressed" binds= [1]]
[connection signal="pressed" from="MarginContainer/Control/ActionBarContainer/LeftButton" to="." method="_on_button_pressed" binds= [2]]
[connection signal="pressed" from="MarginContainer/Control/ActionBarContainer/RightButton" to="." method="_on_button_pressed" binds= [3]]
[connection signal="pressed" from="MarginContainer/Control/ActionBarContainer/UndoButton" to="." method="_on_undo_button_pressed"]
[connection signal="toggled" from="MarginContainer/Control/OptionsContainer/CameraButton" to="." method="_on_camera_button_toggled"]
[connection signal="pressed" from="MarginContainer/Control/GoButton" to="." method="_on_go_button_pressed"]
